fix style on safari

--- a/css/style.css
+++ b/css/style.css
@@ -567,9 +567,11 @@ p {
     border: 1px solid #ccc;
     transition: all 0.2s linear;
 }
-input[type=submit]{
+
+input[type=submit] {
     background-color: rgba(86, 141, 229, 1);
 }
+
 .contact-form input[type=submit] {
     border: 0;
 }
@@ -590,7 +592,7 @@ input[type=submit]{
 
 .contact-form-submit {
     background-color: rgba(86, 141, 229, 1);
-    margin-top: 3rem;
+    padding: 1.5rem;
     color: #ffff;
     font-weight: 500;
 }
@@ -622,34 +624,46 @@ input[type=submit]{
     color: #504e70;
     font-weight: 500;
 }
-@media (prefers-color-scheme: dark){
-    body{
+
+@media (prefers-color-scheme: dark) {
+    body {
         background-color: #2B2B2B;
     }
-    h1, h2, h3, p, .title-intro, span , .skill-item-name, .education-item-time i ,.education-item-time span, #transaction-count, .fa-bars:before, .fa-times-circle, .navbar-list span{
+
+    h1, h2, h3, p, .title-intro, span, .skill-item-name, .education-item-time i, .education-item-time span, #transaction-count, .fa-bars:before, .fa-times-circle, .navbar-list span {
         color: #EEEEEE;
     }
-    .edu-education-item, .home-content, .home-avatar, .navbar-list, .navbar-item i{
+
+    .edu-education-item, .home-content, .home-avatar, .navbar-list, .navbar-item i {
         background-color: #423F3E;
         border: #423F3E;
     }
-    .contact-form input{
+
+    .contact-form input {
         background-color: #423F3E;
         border: none;
         color: #EEEEEE;
+        -webkit-appearance: none;
+        -moz-appearance: none;
+        appearance: none;
     }
+
     .project-item {
         border: 1rem solid #423F3E;
     }
+
     ::placeholder {
         color: #EEEEEE;
     }
-    input[type=submit]{
+
+    input[type=submit] {
         background-color: rgba(86, 141, 229, 1);
     }
+
     html::-webkit-scrollbar-track {
         background-color: #423F3E;
     }
+
     html::-webkit-scrollbar-thumb {
         height: 10rem;
         background-color: #ccc;
